# todo-project

./: .env.example  .gitignore  README.md  docker-compose.yml  initdb.sql  pyproject.toml
.github/workflows/: ci.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
src/: config.py  db.py
src/templates/: index.html  login.html  signup.html
src/web/: app.py  auth.py  parser.py  tasks.py  types.py
tests/: test_auth.py  test_parser.py
